Jdbc에서 Data JPA로 이식